Fixed unnecessary whitespace

--- a/src/styles/CardHandler.css
+++ b/src/styles/CardHandler.css
@@ -78,11 +78,14 @@
 }
 
 .Card-Data {
-    opacity: 0;
     max-height: 0;
-    padding: 1rem 2rem 0 2rem;
     overflow: hidden;
     transition: max-height 0.8s ease, opacity 0.8s ease;
+}
+
+.Card-Data.unvisible {
+    margin: 0;
+    padding: 0;
 }
 
 .Card-Data.visible {
